[package]
name = "pathfinder_vulkan"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
byteorder = "1.3"
foreign-types = "0.3"
half = "1.4"
vulkano = "0.17"
vulkano-win = "0.17"
winit = "0.21.0"
shade_runner = {path = "../../..//source/shade_runner"}

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_resources]
path = "../resources"

[dependencies.pathfinder_simd]
path = "../simd"
