[package]
name = "canvas_vulkan_minimal"
version = "0.1.0"
authors = ["Mitchell Hansen <mitchellhansen@lavabit.com>"]
edition = "2018"

[dependencies]
foreign-types = "0.3"
vulkano = "0.17.0"

[dependencies.pathfinder_canvas]
features = ["pf-text"]
path = "../../canvas"

[dependencies.pathfinder_color]
path = "../../color"

[dependencies.pathfinder_content]
path = "../../content"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_vulkan]
path = "../../vulkan"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_renderer]
path = "../../renderer"
